force-app/main/default/objects/LOOKUP__c/LOOKUP__c.object-meta.xml
<CustomObject>
    <description>Stores lookup/picklist values for various objects.
This will have the ability to sort using a sort order for special lists if need be.</description>
    <label>Lookup</label>
    <nameField>
        <label>LOOKUP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lookups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>