force-app/main/default/objects/LOOKUP__c/fields/Lookup_Group__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Group__c</fullName>
    <label>Lookup Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>