force-app/main/default/objects/LOOKUP__c/fields/Short_Text__c.field-meta.xml
<CustomField>
    <fullName>Short_Text__c</fullName>
    <label>Short Text</label>
    <length>32</length>
    <type>Text</type>
</CustomField>