force-app/main/default/objects/LOOKUP__c/fields/Status_Category__c.field-meta.xml
<CustomField>
    <fullName>Status_Category__c</fullName>
    <inlineHelpText>For Email Status Lookups</inlineHelpText>
    <label>Status Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Block</fullName>
            </value>
            <value>
                <fullName>Hard Bounce</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>No Category</fullName>
            </value>
            <value>
                <fullName>Resend</fullName>
            </value>
            <value>
                <fullName>Soft Bounce</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Email Changed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>