force-app/main/default/objects/LOOKUP__c/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <label>Full Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>