force-app/main/default/objects/LOOKUP__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Lookup_Group__c</columns>
    <columns>NAME</columns>
    <columns>Short_Text__c</columns>
    <columns>Text__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Status_Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>